# TrafficSimulation

./: .gitignore  LICENSE  README.md
example/: TrafficSimulation.pro  checkerboard.cpp  checkerboard.h  main.cpp  main.qml  obstacles.cpp  obstacles.h  simulation.cpp  simulation.h  simulation_lines.h  tslib.pri  vehicle.cpp  vehicle.h
src/: TrafficSimulation.pro
src/simulation/: base.h  types.h
tslib/: CMakeLists.txt  generate_solution_VS2017x64.cmd
tslib/include/: api.h  types.h
tslib/include/tslib/: api.h  types.h
tslib/source/: api.cpp  base.h  globals.h  metrics.h  simulation.cpp  simulation.h  test.cpp
tslib/source/helpers/: helper_id.cpp  helper_id.h  helper_math.cpp  helper_math.h
